--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,10 @@
 <link rel="stylesheet" type="text/css" href="styles/single_styles.css">
 <link rel="stylesheet" type="text/css" href="styles/single_responsive.css">
 
+
+<link rel="stylesheet" type="text/css" href="styles/categories_styles.css">
+<link rel="stylesheet" type="text/css" href="styles/categories_responsive.css">
+
   <link
   rel="stylesheet"
   type="text/css"
@@ -69,6 +73,7 @@
   <script src="plugins/OwlCarousel2-2.2.1/owl.carousel.js"></script>
   <script src="plugins/easing/easing.js"></script>
   <script src="js/custom.js"></script>
+  <!-- <script src="js/categories_custom.js"></script> -->
 </body>
 
 </html>
